Fix some layout issues on mobile

--- a/client/src/modules/common/components/slice-slider/styles.module.css
+++ b/client/src/modules/common/components/slice-slider/styles.module.css
@@ -1,4 +1,15 @@
-.sliceSlider {
-  flex: 0 0 auto !important;  
-  width: 30px;
+@media only screen and (min-width: 768px) {
+  .sliceSlider {
+    flex: 0 0 0 !important;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .sliceSlider { 
+    width: 100%;
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
 }
